<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".InstructionScreen"
    android:padding="20dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/farmer" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="120dp"
        android:padding="20dp"
        android:background="@drawable/textbox4">
        <TextView
            android:id="@+id/instruction_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:fontFamily="@font/gloria_hallelujah"
            android:text="@string/instruction_1"/>
        <TextView
            android:id="@+id/instruction_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:fontFamily="@font/gloria_hallelujah"
            android:text="@string/instruction_2"/>
        <TextView
            android:id="@+id/instruction_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:fontFamily="@font/gloria_hallelujah"
            android:text="@string/instruction_3"/>
        <TextView
            android:id="@+id/instruction_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:fontFamily="@font/gloria_hallelujah"
            android:text="@string/instruction_4"/>
        <TextView
            android:id="@+id/instruction_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:fontFamily="@font/gloria_hallelujah"
            android:text="@string/instruction_5"/>
        <TextView
            android:id="@+id/instruction_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:fontFamily="@font/gloria_hallelujah"
            android:text="@string/instruction_6"/>
        <TextView
            android:id="@+id/instruction_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:fontFamily="@font/gloria_hallelujah"
            android:text="@string/instruction_7"/>
    </RelativeLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:onClick="continueInstruction"
        android:text="@string/continue_game"
        android:textSize="40dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/next"
        android:layout_alignParentRight="true"
        android:text="@string/skip_intro"
        android:clickable="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:fontFamily="@font/gloria_hallelujah"
        android:onClick="goToNext" />
</RelativeLayout>