<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="smartSpaces.Pandora.LostScreen"
    android:background="@color/black">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bloodsplatter3"
        android:layout_centerVertical="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/lost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:textSize="50dp"
            android:text="@string/lost"/>

        <Button
            android:id="@+id/new_game"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/lost"
            android:text="@string/new_game"
            android:textSize="40dp"
            android:background="#66eeeeee"
            android:onClick="startNewGame"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/home"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/new_game"
            android:text="@string/home"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="#66eeeeee"
            android:onClick="goToHome"/>
    </RelativeLayout>
</RelativeLayout>